// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нормально отрендериться список табов на карточке new (с кредитами) 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,card",
        "name": "card",
        "title": "Объявление",
        "url": "link/card/?category=cars&sub_category=&section=new&mark=VOLKSWAGEN&model=POLO&sale_id=1081240978&sale_hash=9de38c5f",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&sub_category=&mark=VOLKSWAGEN&model=POLO&super_gen=20113124&configuration_id=20554752&tech_param_id=20726508&complectation_id=20554752_0_20726508",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=VOLKSWAGEN&section=new",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=VOLKSWAGEN&model=POLO&super_gen=20113124&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,credit",
        "name": "bank-promo",
        "title": "Кредиты",
        "url": "link/bank-promo/?",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=VOLKSWAGEN&model=POLO&super_gen=20113124&configuration_id=20554752&sale_id=1081240978&sale_hash=9de38c5f&section=new",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов на карточке new 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,card",
        "name": "card",
        "title": "Объявление",
        "url": "link/card/?category=cars&sub_category=&section=new&mark=VOLKSWAGEN&model=POLO&sale_id=1081240978&sale_hash=9de38c5f",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&sub_category=&mark=VOLKSWAGEN&model=POLO&super_gen=20113124&configuration_id=20554752&tech_param_id=20726508&complectation_id=20554752_0_20726508",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=VOLKSWAGEN&section=new",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=VOLKSWAGEN&model=POLO&super_gen=20113124&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=VOLKSWAGEN&model=POLO&super_gen=20113124",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=VOLKSWAGEN&model=POLO&super_gen=20113124&configuration_id=20554752&sale_id=1081240978&sale_hash=9de38c5f&section=new",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов на карточке used (с кредитами) 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,card",
        "name": "card",
        "title": "Объявление",
        "url": "link/card/?category=cars&sub_category=&section=used&mark=AUDI&model=Q5&sale_id=1082479594&sale_hash=63ee1b5b",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&sub_category=&mark=AUDI&model=Q5&super_gen=8351293&configuration_id=8351305&tech_param_id=8351307&complectation_id=8351305_0_8351307",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=used",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=AUDI&model=Q5&super_gen=8351293&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,credit",
        "name": "bank-promo",
        "title": "Кредиты",
        "url": "link/bank-promo/?",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=AUDI&model=Q5&super_gen=8351293&configuration_id=8351305&sale_id=1082479594&sale_hash=63ee1b5b&section=used",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов на карточке used 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,card",
        "name": "card",
        "title": "Объявление",
        "url": "link/card/?category=cars&sub_category=&section=used&mark=AUDI&model=Q5&sale_id=1082479594&sale_hash=63ee1b5b",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&sub_category=&mark=AUDI&model=Q5&super_gen=8351293&configuration_id=8351305&tech_param_id=8351307&complectation_id=8351305_0_8351307",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=used",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=AUDI&model=Q5&super_gen=8351293&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=AUDI&model=Q5&super_gen=8351293",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=AUDI&model=Q5&super_gen=8351293&configuration_id=8351305&sale_id=1082479594&sale_hash=63ee1b5b&section=used",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов на карточке used moto (с кредитами) 1`] = `
<Connect(ServiceNavigation)
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,card",
        "name": "card",
        "title": "Объявление",
        "url": "link/card/?category=moto&sub_category=atv&section=used&mark=BMW&model=155&sale_id=1082479594&sale_hash=63ee1b5b",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=BMW&model=155&super_gen=&parent_category=moto&category=atv",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,credit",
        "name": "bank-promo",
        "title": "Кредиты",
        "url": "link/bank-promo/?",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов на карточке used moto 1`] = `
<Connect(ServiceNavigation)
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,card",
        "name": "card",
        "title": "Объявление",
        "url": "link/card/?category=moto&sub_category=atv&section=used&mark=BMW&model=155&sale_id=1082479594&sale_hash=63ee1b5b",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=BMW&model=155&super_gen=&parent_category=moto&category=atv",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов на карточке группы (с кредитами) 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,card-group",
        "name": "card-group",
        "title": "Объявления",
        "url": "link/card-group/?category=cars&section=new&mark=AUDI&model=A4&super_gen=222&configuration_id=111",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&mark=AUDI&model=A4&super_gen=222&configuration_id=111",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=AUDI&section=new",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=AUDI&model=A4&super_gen=222&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,credit",
        "name": "bank-promo",
        "title": "Кредиты",
        "url": "link/bank-promo/?",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=AUDI&model=A4&super_gen=222&configuration_id=111&section=new",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов на карточке группы 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,card-group",
        "name": "card-group",
        "title": "Объявления",
        "url": "link/card-group/?category=cars&section=new&mark=AUDI&model=A4&super_gen=222&configuration_id=111",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&mark=AUDI&model=A4&super_gen=222&configuration_id=111",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=AUDI&section=new",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=AUDI&model=A4&super_gen=222&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=AUDI&model=A4&super_gen=222",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=AUDI&model=A4&super_gen=222&configuration_id=111&section=new",
      },
    ]
  }
/>
`;
